Change package name to be lowercase and non camelcase.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "FroalaImageCaption",
+    "name": "froala-image-caption",
     "version": "1.0.0",
     "description": "An image caption plugin for the Froala WYSIWYG editor",
     "main": [
